# richc-app

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
include/richc/app/: app.h
include/richc/font/: font.h
include/richc/gfx/: buffer.h  gfx.h  pipeline.h  render_target.h  shader.h  texture.h
include/richc/image/: array_image.h  image.h  image_pack.h
include/richc_app/: app.h  events.h  gfx.h  keys.h
src/: app_glfw.c  gfx_gl33.c
src/app/: app_glfw.c
src/font/: font.c
src/gfx/: buffer_gl33.c  gfx_gl33.c  pipeline_gl33.c  render_target_gl33.c  shader_gl33.c  texture_gl33.c  texture_gl33_internal.h
src/image/: image.c  image_pack.c
test/: gen_owl.py  test_app.c
